=========
Changelog
=========

------------------
0.1b3 (unreleased)
------------------

- Add option to completely clear the XMPP password utility.
  [jcbrand]
- Add upgrade step to make sure the registry is reloaded so that the
  "auto-register on login" entry is added.
  [jcbrand]


0.1b2 (2013-01-17)
------------------

- Add a configuration setting to turn auto-register on login on. It's disabled
  by default. 
  [jcbrand]


0.1b1 (2013-01-16)
------------------

- Feature: if not already registered, Plone users get
  registered on jabber server on login
  [alecghica]
- Bugfix: no need to refresh browser for users registered
  on login, they are binded on the fly
  [alecghica]
- Bugfix: "Deregister ALL Users" function, credentials were
  left un-deleted under IXMPPPasswordStorage resulting in
  various errors when registering/deregistering users
  [alecghica]
- Bugfix: fixed subscribing when a new plone user is added
  [alecghica]
- Bugfix: users were only being auto-subscribed to
  other users added in that current session
  [alecghica]
- Bugfix: new users are now auto-subscribed only
  to existing XMPP users
  [alecghica]


0.1a8 (2012-12-13)
------------------

- Bugfix. Check for GS profile version in dbconfig.py to avoid the instance not
  starting without having run the GS upgrade step.
  [jcbrand]


0.1a7 (2012-12-13)
------------------

- Documentation updated with Apache config example.
  [alecghica]
- Cleaned up dependencies that already ship with Plone
  [alecghica]
- Made Products.UserAndGroupSelectionWidget package optional.
  Products.UserAndGroupSelectionWidget will be imported only
  if package version is greater then 2.0.4 as it brings dependencies
  like plone.dexterity witch conflict with other packages found in
  the current Plone release.
  [alecghica]
- Fixed register users form to work for the case when
  Products.UserAndGroupSelectionWidget is not installed/used
  [alecghica]
- Added info on how to make plone.dexterity optional